// Vitest Snapshot v1

exports[`Stepper > Stepper baseVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper minMaxVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Stepper 步进器
  </h1>
  <p
    class="summary"
  >
    用于数量的增减。
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        基础步进器
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        最大最小状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium t-stepper--filled-disabled"
            disabled=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        步进器样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--outline t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--outline t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--outline t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--normal t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--normal t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--normal t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        步进器尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--large"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--large"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--large"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--large"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--small"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--small"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.5 7.35h9v1.3h-9v-1.3z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--small"
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--small"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper sizeVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--large"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--large"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--large"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--large"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--small"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--small"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--small"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--small"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper statusVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium t-stepper--filled-disabled"
      disabled=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper themeVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--outline t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--outline t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--outline t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--normal t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--normal t-stepper__input--medium"
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--normal t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;
